--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <body>
     <button id="action">Действие</button>
     <div class="container" id="app"></div>
+    <input type="text" />
   </body>
 </html>
